-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.17.0
-
3
-
9223372036854775807
This issue was created by maloo for Chakshu Kansal <ckansal@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/c95b24a1-9af1-49ab-bb9a-de7cac072c1c
test_56eaa failed with the following error:
expected 'sanityusr' but got 'root' from file /mnt/lustre/d22.sanity/etc/hosts
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/118056 - 5.14.0-503.40.1.el9_5.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/118056 - 5.14.0-503.40.1_lustre.el9.x86_64
== sanity test 56eaa: test lfs find -printf added functions ========================================================== 13:12:29 (1761829949) comparing 32315 elements starting with: lfs: 144115188193296385 root root drwxrwxrwx /mnt/lustre find: 144115188193296385 root root drwxrwxrwx /mnt/lustre sanity test_56eaa: @@@@@@ FAIL: expected 'sanityusr' but got 'root' from file /mnt/lustre/d22.sanity/etc/hosts>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_56eaa - expected 'sanityusr' but got 'root' from file /mnt/lustre/d22.sanity/etc/hosts
- is related to
-
LU-20040 sanity test_56eaa: FAIL: expected 'sanityusr' but got 'root' from file /mnt/lustre/d33a.sanity/f33a.sanity
-
- Resolved
-