LU-19557 llapi: fix race in printf username/group cache

The printf_format_directive() function used static variables
to cache username and group name lookups. With parallel find
enabled by default, multiple worker threads call this function
concurrently, causing race conditions where threads overwrite
each other's cached values.

This resulted in test_56eaa failures showing incorrect
usernames/groups (e.g., 'root' instead of 'sanityusr').

Fix by making the cache variables thread-local using
__thread, so each worker thread has its own cache.

Also fix thread-safety issues with localtime() calls in
printf_format_timestamp() and lov_dump_comp_v1_entry() by
using localtime_r() instead, which takes a user-provided
buffer rather than returning a static buffer.

Test-Parameters: testlist=sanity env=ONLY=56eaa,ONLY_REPEAT=100
Fixes: a00b941661 ("LU-17814 utils: Enable pfind by default")
Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: I782d605ca2d6ecebccc1f6b628d31f5e98a48133
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62523
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>